Default to +font-secondary and remove unnecessary instances

--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -93,6 +93,7 @@
     font-size: $font-size-50
 
 .profile__position
+  +font-primary
   margin-bottom: $spacing-60
   +font-weight-light
   font-size: $profile-position-font-size
@@ -104,6 +105,7 @@
     font-size: $font-size-40
 
 .profile__about p
+  +font-primary
   +font-weight-regular
   font-size: $body-font-size
   color: $profile-about-font-color
