--- a/components/colors/colors.sass
+++ b/components/colors/colors.sass
@@ -11,6 +11,7 @@
   min-height: 80vh
 
 .colors__heading
+  +font-primary
   font-size: $font-size-50
   color: $color-neutral-100
   margin: $spacing-30
