--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -32,7 +32,6 @@
     stroke: none
 
 .hero__heading
-  +font-secondary
   +font-weight-extra-bold
   font-size: 6.5vw
   font-size: 6.5vmax
@@ -44,6 +43,7 @@
   margin: $spacing-20
 
 .hero__subheading
+  +font-primary
   +font-weight-regular
   font-size: $font-size-50
   color: $color-neutral-20
