--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -23,6 +23,7 @@
 
 .why-us__header
   font-size: $font-size-60
+  +font-primary
   +font-weight-bold
   color: $why-us-header-color
   margin-bottom: $spacing-60
@@ -32,7 +33,6 @@
 
 .why-us__tagline
   font-size: $font-size-50
-  +font-secondary
   +font-weight-regular
   color: $why-us-tagline-color
   margin-bottom: $spacing-60
@@ -44,7 +44,6 @@
 
 .why-us__button
   font-size: $font-size-50
-  +font-secondary
   +font-weight-light
   color: $why-us-button-color
   border: 3px solid $why-us-button-color
@@ -123,7 +122,6 @@
   font-size: $font-size-30
   line-height: $spacing-40
   color: $modal-question-color
-  +font-secondary
   +font-weight-regular
   margin-bottom: $spacing-40
   text-align: center
@@ -149,7 +147,6 @@
 .modal__question
   color: $modal-question-color
   font-size: $font-size-40
-  +font-secondary
   +font-weight-regular
   margin-top: $spacing-60
   margin-bottom: $spacing-40
@@ -176,7 +173,6 @@
 
 .modal__answer
   font-size: $font-size-20
-  +font-secondary
   +font-weight-regular
   text-align: center
   color: $modal-question-color
