--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -43,6 +43,7 @@
 
 .workflow__title
   color: $workflow-title-color
+  +font-primary
   +font-weight-bold
   font-size: $font-size-50
   margin-bottom: $spacing-40
@@ -50,7 +51,6 @@
 
 .workflow__paragraph p
   color: $workflow-paragraph-color
-  +font-secondary
   +font-weight-regular
   font-size: $font-size-30
   line-height: $spacing-40
