--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -5,6 +5,7 @@
 @import ../../global/sass-mixins/breakpoints
 
 .contact
+  +font-primary
   position: relative
   min-height: 100vh
   padding-top: 20vw
@@ -127,7 +128,6 @@ textarea.form__field__control
 textarea.form__field__control
   height: 8rem
   background-color: transparent
-  +font-secondary
 
 .form__field__label
   color: $contact-label-color
