--- a/components/footer/footer.sass
+++ b/components/footer/footer.sass
@@ -11,6 +11,7 @@
   flex-direction: column
   align-items: center
   justify-content: space-between
+  +font-primary
   +font-weight-regular
 
 .footer__brand
