--- a/global/sass-mixins/_sub-header.sass
+++ b/global/sass-mixins/_sub-header.sass
@@ -4,6 +4,7 @@
 @import ./typography
 
 =sub-header($start-color, $end-color)
+  +font-primary
   +font-weight-bold
   font-size: $sub-header-font-size
   color: $sub-header-fallback-color
