--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -139,6 +139,8 @@ $success-font-color: $color-neutral-20
 $workflow-title-color: $color-neutral-20
 $workflow-paragraph-color: $color-neutral-40
 $workflow-background-color: $color-neutral-100
+$workflow-header-start-color: $color-primary-100
+$workflow-header-end-color: $color-primary-110
 
 // Logo colors
 $logo-light-fill-color--pink: $color-primary-100
@@ -162,5 +164,5 @@ $modal-header-color: $color-neutral-20
 $modal-x-color: $color-neutral-20
 $modal-question-color: $color-neutral-20
 $modal-link-color: $color-neutral-40
-$modal-title-start-color: $color-primary-110
-$modal-title-end-color: $color-primary-100
+$modal-title-start-color: $color-primary-100
+$modal-title-end-color: $color-primary-110
