Setup lazyLoad with error

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -8,7 +8,7 @@
       <img
         data-src="{{ person.image.file.url }}"
         alt="{{ person.image.description }}"
-        class="profile__image"
+        class="profile__image lazy-load"
       />
       <div class="profile__block"></div>
     </div>
