Import only latin fonts with font-display: auto

--- a/global/main.sass
+++ b/global/main.sass
@@ -2,6 +2,7 @@
 @import sass-global-sources/reset
 
 // Global styles
+@import sass-global-sources/font-faces
 @import sass-global-sources/base
 
 // Bring in components
