--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -54,7 +54,7 @@
 .profile__image
   width: 100%
   height: 100%
-  object-fit: cover
+  background-size: cover
 
 .profile__block
   transform-origin: top
