Render contentful images with macro and properly resize

--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -39,6 +39,7 @@
   margin: 0 $spacing-60
   max-height: 80vh
   max-width: 30%
+  width: 44rem
   display: flex
   align-items: center
   position: relative
@@ -46,6 +47,7 @@
   +media(tablet-landscape)
     margin: 0 $spacing-40
     max-width: 50vw
+    width: 25rem
   +media(tablet-portrait)
     max-width: 60vw
   +media(mobile)
