--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -24,7 +24,7 @@
   display: flex
   align-items: center
   justify-content: center
-  +media(tablet-portrait)
+  +media(tablet-landscape)
     display: none
 
 .right
@@ -65,3 +65,4 @@
 .workflow__image
   max-height: 100%
   width: 100%
+  background-size: cover
