Center workflow content on tablet-landscape

--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -36,10 +36,9 @@
   background-color: $workflow-background-color
   +media(tablet-landscape)
     padding: 5rem 3rem
-  +media(tablet-portrait)
     align-items: center
     width: 100%
-  +media(mobile)
+  +media(tablet-landscape)
     padding: 2rem 1rem
 
 .workflow__title
@@ -57,7 +56,7 @@
   line-height: $spacing-40
   margin-bottom: $spacing-30
   max-width: 40rem
-  +media(tablet-portrait)
+  +media(tablet-landscape)
     text-align: center
   +media(mobile)
     font-size: $font-size-20
