--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -2,7 +2,7 @@
   <div class="contact__info">
     <h1 class="contact__header">Get in touch.</h1>
     <a href="mailto:{{ component.email }}" class="contact__email">{{
-      component.email
+      component.strings.email
     }}</a>
     <div class="contact__topics">
       {%- for topic in component.topics -%}
