--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -36,6 +36,6 @@
         d="M427.91,697.25c-.47-.28-.83-.06-.81.49l8.35,168.76a1.2,1.2,0,0,1-.93,1.2l-336,69.6a1.62,1.62,0,0,1-1.54-.63L22.06,825.33a2.81,2.81,0,0,1-.38-1.81l96.64-534a5.59,5.59,0,0,1,.75-1.8l73.86-106.36a.93.93,0,0,1,1.35-.2L577,487.43a.56.56,0,0,0,1-.35l44.31-214.6a3.49,3.49,0,0,1,1-1.64L857.75,63.16a.75.75,0,0,1,1.21.23L944,228.61a5.64,5.64,0,0,1,.51,1.89l32.9,631a1.69,1.69,0,0,1-.84,1.46L833.39,937a2,2,0,0,1-1.75,0Z"
       />
     </svg>
-    <h1 class="hero__heading">NERDWISE</h1>
+    <h1 class="hero__heading">{{ component.contentful.heading }}</h1>
   </div>
 </section>
