--- a/components/why-us/why-us.html
+++ b/components/why-us/why-us.html
@@ -1,22 +1,22 @@
 <section class="why-us">
   <div class="why-us__content">
     <h1 class="why-us__header">
-      {{ component.header }}
+      {{ component.contentful.header }}
     </h1>
-    <h4 class="why-us__tagline">{{ component.tagline }}</h4>
+    <h4 class="why-us__tagline">{{ component.contentful.tagline }}</h4>
     <button class="why-us__button">
-      {{ component.button }}
+      {{ component.contentful.button }}
     </button>
   </div>
   <div class="modal">
     <div class="modal__content">
       <div class="modal__x">&times;</div>
-      <h2 class="modal__header">{{ component.modal_title }}</h2>
+      <h2 class="modal__header">{{ component.contentful.modal_title }}</h2>
       <div class="modal__info">
-        {{ component.modal_copy | markdown | safe }}
+        {{ component.contentful.modal_copy | markdown | safe }}
       </div>
       <ul class="modal__list">
-        {% for question in component.modal_questions %}
+        {% for question in component.contentful.modal_questions %}
         <li class="modal__item modal__item--hidden">
           <p class="modal__question modal__question--hidden">
             {{ question.question }}
