Setup block reveal on load

--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -69,8 +69,9 @@
   left: 0
   transition: transform 0.3s
 
-.profile__block--reveal
-  transform: translateY(-100%)
+.profile__image--reveal
+  .profile__block--2
+    transform: translateY(-100%)
 
 .profile__info
   display: flex
