--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -62,6 +62,7 @@
     font-size: $font-size-20
 
 .workflow__image
-  max-height: 100%
+  height: 100%
   width: 100%
   background-size: cover
+  background-position: center
