Improve responsiveness of why-us modal

--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -115,6 +115,8 @@
   +sub-header($modal-title-start-color, $modal-title-end-color)
   margin: $spacing-60 0
   text-align: center
+  +media(tablet-portrait)
+    font-size: $font-size-50
   +media(mobile)
     font-size: $font-size-30
 
