--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -23,6 +23,7 @@
   align-items: flex-start
   justify-content: center
   margin: $spacing-50 0
+  max-width: 95vw
   +media(tablet-portrait)
     flex-direction: column
     align-items: center
