Add whitespace to right side of nav

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -33,6 +33,7 @@
   justify-content: space-between
   width: 50%
   height: 100%
+  padding-right: 2rem
   +media(tablet-landscape)
     margin-right: 7rem
   +media(tablet-portrait)
