--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -141,6 +141,8 @@ $workflow-paragraph-color: $color-neutral-40
 $workflow-background-color: $color-neutral-100
 $workflow-header-start-color: $color-primary-100
 $workflow-header-end-color: $color-primary-80
+$workflow-button-color: $color-neutral-20
+$workflow-button-color--dark: $color-neutral-100
 
 // Logo colors
 $logo-light-fill-color--pink: $color-primary-100
