Move modal button content to contentful

--- a/components/workflow/workflow.html
+++ b/components/workflow/workflow.html
@@ -25,7 +25,7 @@ render_contentful_image with context -%}
     </div>
     {%- endfor -%}
     <button class="workflow__button">
-      Click Here
+      {{ component.button }}
     </button>
   </div>
 </section>
