--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -158,6 +158,9 @@ textarea.form__field__control
   transform: translateY(100%)
   visibility: hidden
   transition: visibility 0.3s, transform 0.3s
+  +media(tablet-portrait)
+    width: 100%
+    justify-content: center
 
 .message--reveal
   transform: translateY(0)
@@ -169,3 +172,8 @@ textarea.form__field__control
   padding: 2rem 8rem
   margin-left: 2rem
   font-weight: 300
+  +media(tablet-landscape)
+    padding: 2rem 4rem
+  +media(tablet-portrait)
+    margin-left: 0
+    padding: 1rem 2rem
