--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -127,6 +127,7 @@ $contact-header-color: $color-neutral-20
 $contact-email-color: $color-neutral-20
 $contact-email-border-color: $color-neutral-60
 $contact-topic-color: $color-accent-cyan-40
+$contact-topic-color--disabled: $color-neutral-20
 $contact-label-color: $color-neutral-20
 $contact-input-color: $color-neutral-20
 $contact-border-color: $color-neutral-20
