--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -37,6 +37,7 @@
   color: $why-us-tagline-color
   margin-bottom: $spacing-60
   text-align: center
+  max-width: 720px
   +media(mobile)
     font-size: $font-size-40
     margin: $spacing-30
@@ -50,7 +51,7 @@
   padding: $spacing-20 $spacing-60
   cursor: pointer
   transition: color 0.2s, background 0.2s
-  +media(mobile) 
+  +media(mobile)
     font-size: $font-size-40
 
 .why-us__button:hover
